--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -23,7 +23,7 @@
     width: 20%;
   }
   .search-box {
-    width: 80%;
+    width: 50%;
     border: 2px solid rgba(0, 0, 0, 0.1);
     /*padding: 10px;*/
     border-radius: 50px;
@@ -68,23 +68,23 @@
     justify-content: end;
   }
   /*------search-----------*/
-  .catgrories {
+  .categories {
     background-color: #f6f9fc;
     padding: 0px 30px;
     border-radius: 5px;
     height: 6vh;
     margin-top: 5px;
   }
-  .catgrories span {
+  .categories span {
     margin-right: 20px;
     font-size: 30px;
     margin-top: 10px;
   }
-  .catgrories h4 {
+  .categories h4 {
     font-weight: 500;
     margin-top: 12px;
   }
-  .catgrories h4 i {
+  .categories h4 i {
     margin-left: 10px;
   }
   header {
