--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -13,17 +13,20 @@
   /*------head-----------*/
   /*------search-----------*/
   .search {
+    display: flex;
     padding: 20px 0;
   }
   .search .logo img {
-    width: auto;
-    height: auto;
+   width: auto;
+   height: auto;
+   margin-left: 50px;
   }
   .search .width {
-    width: 20%;
+   width: 20%;
   }
   .search-box {
-    width: 50%;
+    width: 80%;
+    margin: 20px;
     border: 2px solid rgba(0, 0, 0, 0.1);
     
   }
