--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -25,7 +25,7 @@
    width: 20%;
   }
   .search-box {
-    width: 80%;
+    width: 60%;
     margin: 20px;
     border: 2px solid rgba(0, 0, 0, 0.1);
     
@@ -43,10 +43,10 @@
     padding: 10px;
   }
   ::placeholder {
-    font-size: 15px;
+    font-size: 16px;
   }
   .search-box span {
-    width: 20%;
+    width: 50%;
     opacity: 0.5;
     border-left: 2px solid rgba(0, 0, 0, 0.1);
     padding: 10px;
@@ -67,7 +67,8 @@
     color: #fff;
   }
   .search .f_flex {
-    justify-content: end;
+    margin-top: 20px;
+    justify-content: center;
   }
   /*------search-----------*/
   .categories {
